kubernetes/apachephp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: apachephp-deployment
 namespace: default
 labels:
  app: apache
spec:
 replicas: 3
 selector:
  matchLabels:
   app: apachephp
 template:
  metadata:
   labels:
    app: apachephp
  spec:
   containers:
    - name: apachephp
      image: my_image:1.0
      imagePullPolicy: Never
      ports:
       - containerPort: 80
         name: apachephp
 
---
apiVersion: v1
kind: Service
metadata:
 name: apachephp-service
 namespace: default
spec:
 selector:
  app: apachephp
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
 type: LoadBalancer
