kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:  /
  namespace: default
spec:
  rules:
  - host: "carloslamp-dev.com"
    http:
      paths:
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: apachephp-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
